--- a/school/views/views.xml
+++ b/school/views/views.xml
@@ -1,28 +1,32 @@
 <odoo>
   <data>
     <!-- explicit list view definition -->
-<!--
-    <record model="ir.ui.view" id="school.list">
-      <field name="name">school list</field>
-      <field name="model">school.school</field>
+  
+    <record model="ir.ui.view" id="school.student_list">
+      <field name="name">school.student list</field>
+      <field name="model">school.student</field>
       <field name="arch" type="xml">
         <tree>
           <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
+          <field name="birth_year"/>
+          <field name="description"/>
+          <field name="inscription_date"/>
+          <field name="last_login"/>
+          <field name="is_student"/>
+          <field name="photo"/>
         </tree>
       </field>
     </record>
--->
+  
 
     <!-- actions opening views on models -->
-<!--
-    <record model="ir.actions.act_window" id="school.action_window">
-      <field name="name">school window</field>
-      <field name="res_model">school.school</field>
+
+    <record model="ir.actions.act_window" id="school.action_student_window">
+      <field name="name">school student window</field>
+      <field name="res_model">school.student</field>
       <field name="view_mode">tree,form</field>
     </record>
--->
+
 
     <!-- server action to the one above -->
 <!--
@@ -41,15 +45,19 @@
 -->
 
     <!-- Top menu item -->
-<!--
-    <menuitem name="school" id="school.menu_root"/>
--->
+
+    <menuitem name="School" id="school.menu_root"/>
+
     <!-- menu categories -->
+
+    <menuitem name="Management" id="school.menu_1" parent="school.menu_root"/>
 <!--
     <menuitem name="Menu 1" id="school.menu_1" parent="school.menu_root"/>
     <menuitem name="Menu 2" id="school.menu_2" parent="school.menu_root"/>
 -->
     <!-- actions -->
+    <menuitem name="Students" id="school.menu_student_list" parent="school.menu_1"
+              action="school.action_student_window"/>
 <!--
     <menuitem name="List" id="school.menu_1_list" parent="school.menu_1"
               action="school.action_window"/>
