--- a/school/views/views.xml
+++ b/school/views/views.xml
@@ -2,7 +2,7 @@
   <data>
     <!-- explicit list view definition -->
   
-    <record model="ir.ui.view" id="school.student_list">
+    <!--<record model="ir.ui.view" id="school.student_list">
       <field name="name">school.student list</field>
       <field name="model">school.student</field>
       <field name="arch" type="xml">
@@ -16,7 +16,18 @@
           <field name="photo"/>
         </tree>
       </field>
-    </record>
+    </record>-->
+
+    <!--<record model="ir.ui.view" id="school.classroom_list">
+      <field name="name">school.classroom list</field>
+      <field name="model">school.classroom</field>
+      <field name="arch" type="xml">
+        <tree>
+          <field name="name"/>
+          <field name="students"/>
+        </tree>
+      </field>
+    </record>-->
   
 
     <!-- actions opening views on models -->
@@ -24,6 +35,12 @@
     <record model="ir.actions.act_window" id="school.action_student_window">
       <field name="name">school student window</field>
       <field name="res_model">school.student</field>
+      <field name="view_mode">tree,form</field>
+    </record>
+
+    <record model="ir.actions.act_window" id="school.action_classroom_window">
+      <field name="name">school classroom window</field>
+      <field name="res_model">school.classroom</field>
       <field name="view_mode">tree,form</field>
     </record>
 
@@ -58,6 +75,9 @@
     <!-- actions -->
     <menuitem name="Students" id="school.menu_student_list" parent="school.menu_1"
               action="school.action_student_window"/>
+
+    <menuitem name="Classrooms" id="school.menu_classroom_list" parent="school.menu_1"
+              action="school.action_classroom_window"/>
 <!--
     <menuitem name="List" id="school.menu_1_list" parent="school.menu_1"
               action="school.action_window"/>
