--- a/school/views/views.xml
+++ b/school/views/views.xml
@@ -2,13 +2,14 @@
   <data>
     <!-- explicit list view definition -->
   
-    <!--<record model="ir.ui.view" id="school.student_list">
+    <record model="ir.ui.view" id="school.student_list">
       <field name="name">school.student list</field>
       <field name="model">school.student</field>
       <field name="arch" type="xml">
         <tree>
           <field name="name"/>
           <field name="birth_year"/>
+          <field name="password"/>
           <field name="description"/>
           <field name="inscription_date"/>
           <field name="last_login"/>
@@ -16,7 +17,7 @@
           <field name="photo"/>
         </tree>
       </field>
-    </record>-->
+    </record>
 
     <!--<record model="ir.ui.view" id="school.classroom_list">
       <field name="name">school.classroom list</field>
@@ -41,6 +42,12 @@
     <record model="ir.actions.act_window" id="school.action_classroom_window">
       <field name="name">school classroom window</field>
       <field name="res_model">school.classroom</field>
+      <field name="view_mode">tree,form</field>
+    </record>
+
+    <record model="ir.actions.act_window" id="school.action_teacher_window">
+      <field name="name">school teacher window</field>
+      <field name="res_model">school.teacher</field>
       <field name="view_mode">tree,form</field>
     </record>
 
@@ -78,6 +85,9 @@
 
     <menuitem name="Classrooms" id="school.menu_classroom_list" parent="school.menu_1"
               action="school.action_classroom_window"/>
+    
+    <menuitem name="Teachers" id="school.menu_teacher_list" parent="school.menu_1"
+              action="school.action_teacher_window"/>
 <!--
     <menuitem name="List" id="school.menu_1_list" parent="school.menu_1"
               action="school.action_window"/>
